Allowing extensions for alerts

--- a/css/fi_airlines.css
+++ b/css/fi_airlines.css
@@ -2,6 +2,45 @@
 @import url("//fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic");
 /* Import Settings */
 /* Import Modules */
+/* line 36, ../scss/modules/_themes.scss */
+#slider {
+  background-color: #508f9f;
+  color: #efefef;
+}
+/* line 18, ../scss/modules/_themes.scss */
+#slider a {
+  color: #9fbfc7;
+}
+/* line 21, ../scss/modules/_themes.scss */
+#slider a:hover {
+  color: #efefef;
+}
+/* line 29, ../scss/modules/_themes.scss */
+#slider label.prefix, #slider label.postfix, #slider label.affix, #slider .label.prefix, #slider .label.postfix, #slider .label.affix {
+  color: #efefef;
+  background-color: #6da7b5;
+}
+
+/* line 41, ../scss/modules/_themes.scss */
+.color-primary {
+  color: #508f9f;
+}
+
+/* line 42, ../scss/modules/_themes.scss */
+.color-secondary {
+  color: #c44741;
+}
+
+/* line 43, ../scss/modules/_themes.scss */
+.color-light {
+  color: #efefef;
+}
+
+/* line 44, ../scss/modules/_themes.scss */
+.color-dark {
+  color: #313131;
+}
+
 /* Typography Resets */
 /* line 8, ../scss/modules/_reset.scss */
 div, dl, dt, dd,
@@ -25,6 +64,12 @@ strong, b {
   line-height: inherit;
 }
 
+/* Form Resets */
+/* line 24, ../scss/modules/_reset.scss */
+input, button, textarea, select {
+  outline: none;
+}
+
 /* line 2, ../scss/modules/_layout.scss */
 *, *:before, *:after, header, footer, section, .col, [class*="col-"], .full, .row, [class*="row-"], .layer, .page, form, body > section, form input[type], form textarea {
   -webkit-box-sizing: border-box;
@@ -42,29 +87,39 @@ strong, b {
   transform: translateY(-50%);
 }
 
-/* line 15, ../scss/modules/_layout.scss */
+/* line 11, ../scss/modules/_layout.scss */
 header, footer, section, .col, [class*="col-"], .full, .row, [class*="row-"], .layer, .page, form, body > section, nav.horizontal > ul, .button-group, #sidebar .field.fi-text {
   overflow: hidden;
   *zoom: 1;
 }
 
+/* line 15, ../scss/modules/_layout.scss */
+.float-left {
+  float: left;
+}
+
 /* line 19, ../scss/modules/_layout.scss */
+.float-right {
+  float: right;
+}
+
+/* line 23, ../scss/modules/_layout.scss */
 html {
   height: 100%;
 }
 
-/* line 23, ../scss/modules/_layout.scss */
+/* line 27, ../scss/modules/_layout.scss */
 *, *:before, *:after {
   position: relative;
 }
 
-/* line 124, ../scss/modules/_layout.scss */
+/* line 128, ../scss/modules/_layout.scss */
 .inline {
   display: inline-block;
   margin-bottom: 0;
 }
 
-/* line 133, ../scss/modules/_layout.scss */
+/* line 145, ../scss/modules/_layout.scss */
 .full {
   height: 100%;
 }
@@ -92,7 +147,7 @@ header, footer, section, .col, [class*="col-"], .full, .row, [class*="row-"], .l
 }
 
 /* line 26, ../scss/modules/_grid.scss */
-.row.col-gutter, [class*="row-"].col-gutter, .row.col-gutter > [class*="col-"], [class*="row-"].col-gutter > [class*="col-"] {
+.row.columns-gutter, [class*="row-"].columns-gutter, .row.columns-gutter > [class*="col-"], [class*="row-"].columns-gutter > [class*="col-"] {
   padding-left: 8px;
   padding-right: 8px;
 }
@@ -103,7 +158,7 @@ header, footer, section, .col, [class*="col-"], .full, .row, [class*="row-"], .l
 }
 
 /* line 36, ../scss/modules/_grid.scss */
-.col.row-gutter, [class*="col-"].row-gutter, .col.row-gutter > [class*="row-"], [class*="col-"].row-gutter > [class*="row-"] {
+.col.rows-gutter, [class*="col-"].rows-gutter, .col.rows-gutter > [class*="row-"], [class*="col-"].rows-gutter > [class*="row-"] {
   padding-top: 8px;
   padding-bottom: 8px;
 }
@@ -2844,25 +2899,26 @@ nav ul ul {
   display: none;
   background-color: #508f9f;
 }
-/* line 38, ../scss/modules/_nav.scss */
+/* line 39, ../scss/modules/_nav.scss */
 nav.horizontal > ul > li {
   float: left;
 }
-/* line 43, ../scss/modules/_nav.scss */
+/* line 44, ../scss/modules/_nav.scss */
 nav.horizontal.full {
   height: 100%;
+  margin-bottom: 0;
 }
-/* line 46, ../scss/modules/_nav.scss */
+/* line 48, ../scss/modules/_nav.scss */
 nav.horizontal.full > ul {
   height: 100%;
 }
-/* line 49, ../scss/modules/_nav.scss */
+/* line 51, ../scss/modules/_nav.scss */
 nav.horizontal.full > ul > li {
   height: 100%;
   display: table;
   table-layout: fixed;
 }
-/* line 54, ../scss/modules/_nav.scss */
+/* line 56, ../scss/modules/_nav.scss */
 nav.horizontal.full > ul > li a {
   display: table-cell;
   vertical-align: middle;
@@ -3414,7 +3470,7 @@ table tbody tr td {
   }
 }
 
-/* line 26, ../scss/modules/_alerts.scss */
+/* line 11, ../scss/modules/_alerts.scss */
 .alert {
   display: block;
   width: 100%;
@@ -3423,54 +3479,63 @@ table tbody tr td {
   margin-bottom: 16px;
   font-size: 13.77648px ;
   font-size: 0.86103rem ;
-  color: #efefef;
-  background-color: #508f9f;
-  border-color: #36616c;
-  color: white;
-}
-/* line 37, ../scss/modules/_alerts.scss */
-.alert.success {
-  color: #efefef;
-  background-color: #96cc69;
-  border-color: #6fae3b;
-  color: white;
-}
-/* line 38, ../scss/modules/_alerts.scss */
-.alert.warning {
-  color: #313131;
-  background-color: #ffcc5c;
-  border-color: #ffb410;
-  color: white;
-}
-/* line 39, ../scss/modules/_alerts.scss */
-.alert.failure {
-  color: #efefef;
-  background-color: #c44741;
-  border-color: #8d302c;
-  color: white;
 }
 
-/* line 35, ../scss/modules/_themes.scss */
-#slider {
+/* line 21, ../scss/modules/_alerts.scss */
+.alert {
   background-color: #508f9f;
   color: #efefef;
+  border-color: #3f707d;
 }
-/* line 14, ../scss/modules/_themes.scss */
-#slider a {
+/* line 69, ../scss/settings/_helpers.scss */
+.alert a {
   color: #9fbfc7;
 }
-/* line 17, ../scss/modules/_themes.scss */
-#slider a:hover {
-  color: #efefef;
+/* line 71, ../scss/settings/_helpers.scss */
+.alert a:hover {
+  color: #7faab4;
 }
-/* line 23, ../scss/modules/_themes.scss */
-#slider p, #slider h1, #slider h2, #slider h3, #slider h4, #slider h5, #slider h6, #slider label, #slider div {
+/* line 26, ../scss/modules/_alerts.scss */
+.success.alert {
+  background-color: #96cc69;
   color: #efefef;
+  border-color: #7bbf43;
 }
-/* line 28, ../scss/modules/_themes.scss */
-#slider label.prefix, #slider label.postfix, #slider label.affix, #slider .label.prefix, #slider .label.postfix, #slider .label.affix {
+/* line 69, ../scss/settings/_helpers.scss */
+.success.alert a {
+  color: #c2ddac;
+}
+/* line 71, ../scss/settings/_helpers.scss */
+.success.alert a:hover {
+  color: #a7ce88;
+}
+/* line 27, ../scss/modules/_alerts.scss */
+.warning.alert {
+  background-color: #ffcc5c;
   color: #efefef;
-  background-color: #6da7b5;
+  border-color: #ffbc29;
+}
+/* line 69, ../scss/settings/_helpers.scss */
+.warning.alert a {
+  color: #f7dda5;
+}
+/* line 71, ../scss/settings/_helpers.scss */
+.warning.alert a:hover {
+  color: #f3cb76;
+}
+/* line 28, ../scss/modules/_alerts.scss */
+.failure.alert {
+  background-color: #c44741;
+  color: #efefef;
+  border-color: #a03732;
+}
+/* line 69, ../scss/settings/_helpers.scss */
+.failure.alert a {
+  color: #d99b98;
+}
+/* line 71, ../scss/settings/_helpers.scss */
+.failure.alert a:hover {
+  color: #cb7773;
 }
 
 /* Import Extensions */
@@ -3546,30 +3611,30 @@ body {
   top: 0;
   bottom: 0;
 }
-/* line 48, ../scss/modules/_layout.scss */
+/* line 52, ../scss/modules/_layout.scss */
 body > header, body > footer {
   position: fixed;
   width: 100%;
   z-index: 2;
 }
-/* line 54, ../scss/modules/_layout.scss */
+/* line 58, ../scss/modules/_layout.scss */
 body > header {
   height: 60px;
   top: 0;
 }
-/* line 60, ../scss/modules/_layout.scss */
+/* line 64, ../scss/modules/_layout.scss */
 body > footer {
   height: 60px;
   bottom: 0;
 }
-/* line 65, ../scss/modules/_layout.scss */
+/* line 69, ../scss/modules/_layout.scss */
 body:after {
   content: "";
   display: block;
   height: 1px;
   margin-top: -1px;
 }
-/* line 100, ../scss/modules/_layout.scss */
+/* line 104, ../scss/modules/_layout.scss */
 body > section {
   width: auto;
   min-height: calc(100% - 60px - 60px);
@@ -3578,11 +3643,11 @@ body > section {
   margin-right: 0px;
   overflow: auto;
 }
-/* line 109, ../scss/modules/_layout.scss */
+/* line 113, ../scss/modules/_layout.scss */
 body > section:first-of-type {
   margin-top: 60px;
 }
-/* line 113, ../scss/modules/_layout.scss */
+/* line 117, ../scss/modules/_layout.scss */
 body > section:last-of-type {
   margin-bottom: 60px;
 }
@@ -3644,19 +3709,15 @@ body > header, body > footer {
   background-color: #717171;
   color: #efefef;
 }
-/* line 14, ../scss/modules/_themes.scss */
+/* line 18, ../scss/modules/_themes.scss */
 #sidebar #sb-1 > header a {
   color: #b0b0b0;
 }
-/* line 17, ../scss/modules/_themes.scss */
+/* line 21, ../scss/modules/_themes.scss */
 #sidebar #sb-1 > header a:hover {
   color: #efefef;
 }
-/* line 23, ../scss/modules/_themes.scss */
-#sidebar #sb-1 > header p, #sidebar #sb-1 > header h1, #sidebar #sb-1 > header h2, #sidebar #sb-1 > header h3, #sidebar #sb-1 > header h4, #sidebar #sb-1 > header h5, #sidebar #sb-1 > header h6, #sidebar #sb-1 > header label, #sidebar #sb-1 > header div {
-  color: #efefef;
-}
-/* line 28, ../scss/modules/_themes.scss */
+/* line 29, ../scss/modules/_themes.scss */
 #sidebar #sb-1 > header label.prefix, #sidebar #sb-1 > header label.postfix, #sidebar #sb-1 > header label.affix, #sidebar #sb-1 > header .label.prefix, #sidebar #sb-1 > header .label.postfix, #sidebar #sb-1 > header .label.affix {
   color: #efefef;
   background-color: #8b8b8b;
@@ -3671,11 +3732,7 @@ body > header, body > footer {
   background-color: #b7b7b7;
   color: #313131;
 }
-/* line 23, ../scss/modules/_themes.scss */
-#sidebar p, #sidebar h1, #sidebar h2, #sidebar h3, #sidebar h4, #sidebar h5, #sidebar h6, #sidebar label, #sidebar div {
-  color: #313131;
-}
-/* line 28, ../scss/modules/_themes.scss */
+/* line 29, ../scss/modules/_themes.scss */
 #sidebar label.prefix, #sidebar label.postfix, #sidebar label.affix, #sidebar .label.prefix, #sidebar .label.postfix, #sidebar .label.affix {
   color: #313131;
   background-color: #9e9e9e;
@@ -3690,19 +3747,15 @@ body > header, body > footer {
   background-color: #bf9b64;
   color: #5f492a;
 }
-/* line 14, ../scss/modules/_themes.scss */
+/* line 18, ../scss/modules/_themes.scss */
 #location-sidebar a {
   color: #8f7247;
 }
-/* line 17, ../scss/modules/_themes.scss */
+/* line 21, ../scss/modules/_themes.scss */
 #location-sidebar a:hover {
   color: #5f492a;
 }
-/* line 23, ../scss/modules/_themes.scss */
-#location-sidebar p, #location-sidebar h1, #location-sidebar h2, #location-sidebar h3, #location-sidebar h4, #location-sidebar h5, #location-sidebar h6, #location-sidebar label, #location-sidebar div {
-  color: #5f492a;
-}
-/* line 28, ../scss/modules/_themes.scss */
+/* line 29, ../scss/modules/_themes.scss */
 #location-sidebar label.prefix, #location-sidebar label.postfix, #location-sidebar label.affix, #location-sidebar .label.prefix, #location-sidebar .label.postfix, #location-sidebar .label.affix {
   color: #5f492a;
   background-color: #ceb288;
@@ -3713,19 +3766,15 @@ body > header, body > footer {
   background-color: #947241;
   color: #313131;
 }
-/* line 14, ../scss/modules/_themes.scss */
+/* line 18, ../scss/modules/_themes.scss */
 #location-sidebar header a {
   color: #625139;
 }
-/* line 17, ../scss/modules/_themes.scss */
+/* line 21, ../scss/modules/_themes.scss */
 #location-sidebar header a:hover {
   color: #313131;
 }
-/* line 23, ../scss/modules/_themes.scss */
-#location-sidebar header p, #location-sidebar header h1, #location-sidebar header h2, #location-sidebar header h3, #location-sidebar header h4, #location-sidebar header h5, #location-sidebar header h6, #location-sidebar header label, #location-sidebar header div {
-  color: #313131;
-}
-/* line 28, ../scss/modules/_themes.scss */
+/* line 29, ../scss/modules/_themes.scss */
 #location-sidebar header label.prefix, #location-sidebar header label.postfix, #location-sidebar header label.affix, #location-sidebar header .label.prefix, #location-sidebar header .label.postfix, #location-sidebar header .label.affix {
   color: #313131;
   background-color: #b48d54;
