--- a/css/iassist.css
+++ b/css/iassist.css
@@ -2,6 +2,26 @@
 @import url("//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,700italic,400,300,700");
 /* Import Settings */
 /* Import Modules */
+/* line 41, ../scss/modules/_themes.scss */
+.color-primary {
+  color: #042f4f;
+}
+
+/* line 42, ../scss/modules/_themes.scss */
+.color-secondary {
+  color: #73bf44;
+}
+
+/* line 43, ../scss/modules/_themes.scss */
+.color-light {
+  color: #efefef;
+}
+
+/* line 44, ../scss/modules/_themes.scss */
+.color-dark {
+  color: #042f4f;
+}
+
 /* Typography Resets */
 /* line 8, ../scss/modules/_reset.scss */
 div, dl, dt, dd,
@@ -25,6 +45,12 @@ strong, b {
   line-height: inherit;
 }
 
+/* Form Resets */
+/* line 24, ../scss/modules/_reset.scss */
+input, button, textarea, select {
+  outline: none;
+}
+
 /* line 2, ../scss/modules/_layout.scss */
 *, *:before, *:after, header, footer, section, .col, [class*="col-"], .full, .row, [class*="row-"], .layer, .page, form, form input[type], form textarea {
   -webkit-box-sizing: border-box;
@@ -42,29 +68,39 @@ strong, b {
   transform: translateY(-50%);
 }
 
-/* line 15, ../scss/modules/_layout.scss */
+/* line 11, ../scss/modules/_layout.scss */
 header, footer, section, .col, [class*="col-"], .full, .row, [class*="row-"], .layer, .page, form, nav.horizontal > ul, .button-group {
   overflow: hidden;
   *zoom: 1;
 }
 
+/* line 15, ../scss/modules/_layout.scss */
+.float-left {
+  float: left;
+}
+
 /* line 19, ../scss/modules/_layout.scss */
+.float-right {
+  float: right;
+}
+
+/* line 23, ../scss/modules/_layout.scss */
 html {
   height: 100%;
 }
 
-/* line 23, ../scss/modules/_layout.scss */
+/* line 27, ../scss/modules/_layout.scss */
 *, *:before, *:after {
   position: relative;
 }
 
-/* line 124, ../scss/modules/_layout.scss */
+/* line 128, ../scss/modules/_layout.scss */
 .inline {
   display: inline-block;
   margin-bottom: 0;
 }
 
-/* line 133, ../scss/modules/_layout.scss */
+/* line 145, ../scss/modules/_layout.scss */
 .full {
   height: 100%;
 }
@@ -92,7 +128,7 @@ header, footer, section, .col, [class*="col-"], .full, .row, [class*="row-"], .l
 }
 
 /* line 26, ../scss/modules/_grid.scss */
-.row.col-gutter, [class*="row-"].col-gutter, .row.col-gutter > [class*="col-"], [class*="row-"].col-gutter > [class*="col-"] {
+.row.columns-gutter, [class*="row-"].columns-gutter, .row.columns-gutter > [class*="col-"], [class*="row-"].columns-gutter > [class*="col-"] {
   padding-left: 8px;
   padding-right: 8px;
 }
@@ -103,7 +139,7 @@ header, footer, section, .col, [class*="col-"], .full, .row, [class*="row-"], .l
 }
 
 /* line 36, ../scss/modules/_grid.scss */
-.col.row-gutter, [class*="col-"].row-gutter, .col.row-gutter > [class*="row-"], [class*="col-"].row-gutter > [class*="row-"] {
+.col.rows-gutter, [class*="col-"].rows-gutter, .col.rows-gutter > [class*="row-"], [class*="col-"].rows-gutter > [class*="row-"] {
   padding-top: 8px;
   padding-bottom: 8px;
 }
@@ -2844,25 +2880,26 @@ nav ul ul {
   display: none;
   background-color: #042f4f;
 }
-/* line 38, ../scss/modules/_nav.scss */
+/* line 39, ../scss/modules/_nav.scss */
 nav.horizontal > ul > li {
   float: left;
 }
-/* line 43, ../scss/modules/_nav.scss */
+/* line 44, ../scss/modules/_nav.scss */
 nav.horizontal.full {
   height: 100%;
+  margin-bottom: 0;
 }
-/* line 46, ../scss/modules/_nav.scss */
+/* line 48, ../scss/modules/_nav.scss */
 nav.horizontal.full > ul {
   height: 100%;
 }
-/* line 49, ../scss/modules/_nav.scss */
+/* line 51, ../scss/modules/_nav.scss */
 nav.horizontal.full > ul > li {
   height: 100%;
   display: table;
   table-layout: fixed;
 }
-/* line 54, ../scss/modules/_nav.scss */
+/* line 56, ../scss/modules/_nav.scss */
 nav.horizontal.full > ul > li a {
   display: table-cell;
   vertical-align: middle;
@@ -3396,7 +3433,7 @@ table tbody tr td {
   }
 }
 
-/* line 26, ../scss/modules/_alerts.scss */
+/* line 11, ../scss/modules/_alerts.scss */
 .alert {
   display: block;
   width: 100%;
@@ -3405,31 +3442,63 @@ table tbody tr td {
   margin-bottom: 16px;
   font-size: 15.49854px ;
   font-size: 0.86103rem ;
-  color: #efefef;
+}
+
+/* line 21, ../scss/modules/_alerts.scss */
+.alert {
   background-color: #042f4f;
-  border-color: #000406;
-  color: white;
-}
-/* line 37, ../scss/modules/_alerts.scss */
-.alert.success {
   color: #efefef;
+  border-color: #02121e;
+}
+/* line 69, ../scss/settings/_helpers.scss */
+.alert a {
+  color: #798f9f;
+}
+/* line 71, ../scss/settings/_helpers.scss */
+.alert a:hover {
+  color: #607585;
+}
+/* line 26, ../scss/modules/_alerts.scss */
+.success.alert {
   background-color: #96cc69;
-  border-color: #6fae3b;
-  color: white;
-}
-/* line 38, ../scss/modules/_alerts.scss */
-.alert.warning {
-  color: #042f4f;
-  background-color: #ffcc5c;
-  border-color: #ffb410;
-  color: white;
-}
-/* line 39, ../scss/modules/_alerts.scss */
-.alert.failure {
   color: #efefef;
+  border-color: #7bbf43;
+}
+/* line 69, ../scss/settings/_helpers.scss */
+.success.alert a {
+  color: #c2ddac;
+}
+/* line 71, ../scss/settings/_helpers.scss */
+.success.alert a:hover {
+  color: #a7ce88;
+}
+/* line 27, ../scss/modules/_alerts.scss */
+.warning.alert {
+  background-color: #ffcc5c;
+  color: #efefef;
+  border-color: #ffbc29;
+}
+/* line 69, ../scss/settings/_helpers.scss */
+.warning.alert a {
+  color: #f7dda5;
+}
+/* line 71, ../scss/settings/_helpers.scss */
+.warning.alert a:hover {
+  color: #f3cb76;
+}
+/* line 28, ../scss/modules/_alerts.scss */
+.failure.alert {
   background-color: #c44741;
-  border-color: #8d302c;
-  color: white;
+  color: #efefef;
+  border-color: #a03732;
+}
+/* line 69, ../scss/settings/_helpers.scss */
+.failure.alert a {
+  color: #d99b98;
+}
+/* line 71, ../scss/settings/_helpers.scss */
+.failure.alert a:hover {
+  color: #cb7773;
 }
 
 /* Import Extensions */
@@ -3542,11 +3611,7 @@ body > header {
   width: 100%;
   z-index: 9;
 }
-/* line 23, ../scss/modules/_themes.scss */
-body > header p, body > header h1, body > header h2, body > header h3, body > header h4, body > header h5, body > header h6, body > header label, body > header div {
-  color: #042f4f;
-}
-/* line 28, ../scss/modules/_themes.scss */
+/* line 29, ../scss/modules/_themes.scss */
 body > header label.prefix, body > header label.postfix, body > header label.affix, body > header .label.prefix, body > header .label.postfix, body > header .label.affix {
   color: #042f4f;
   background-color: #d5d5d5;
@@ -3586,19 +3651,15 @@ body h1, body h2, body h3, body h4, body h5 {
   background-color: #042f4f;
   color: #efefef;
 }
-/* line 14, ../scss/modules/_themes.scss */
+/* line 18, ../scss/modules/_themes.scss */
 #view1 a {
   color: #798f9f;
 }
-/* line 17, ../scss/modules/_themes.scss */
+/* line 21, ../scss/modules/_themes.scss */
 #view1 a:hover {
   color: #efefef;
 }
-/* line 23, ../scss/modules/_themes.scss */
-#view1 p, #view1 h1, #view1 h2, #view1 h3, #view1 h4, #view1 h5, #view1 h6, #view1 label, #view1 div {
-  color: #efefef;
-}
-/* line 28, ../scss/modules/_themes.scss */
+/* line 29, ../scss/modules/_themes.scss */
 #view1 label.prefix, #view1 label.postfix, #view1 label.affix, #view1 .label.prefix, #view1 .label.postfix, #view1 .label.affix {
   color: #efefef;
   background-color: #064c80;
@@ -3650,11 +3711,7 @@ body h1, body h2, body h3, body h4, body h5 {
   background-color: #e2e2e2;
   color: #042f4f;
 }
-/* line 23, ../scss/modules/_themes.scss */
-#view2 p, #view2 h1, #view2 h2, #view2 h3, #view2 h4, #view2 h5, #view2 h6, #view2 label, #view2 div {
-  color: #042f4f;
-}
-/* line 28, ../scss/modules/_themes.scss */
+/* line 29, ../scss/modules/_themes.scss */
 #view2 label.prefix, #view2 label.postfix, #view2 label.affix, #view2 .label.prefix, #view2 .label.postfix, #view2 .label.affix {
   color: #042f4f;
   background-color: #c9c9c9;
@@ -3676,19 +3733,15 @@ footer {
   font-size: 15.49854px ;
   font-size: 0.86103rem ;
 }
-/* line 14, ../scss/modules/_themes.scss */
+/* line 18, ../scss/modules/_themes.scss */
 footer a {
   color: #798f9f;
 }
-/* line 17, ../scss/modules/_themes.scss */
+/* line 21, ../scss/modules/_themes.scss */
 footer a:hover {
   color: #efefef;
 }
-/* line 23, ../scss/modules/_themes.scss */
-footer p, footer h1, footer h2, footer h3, footer h4, footer h5, footer h6, footer label, footer div {
-  color: #efefef;
-}
-/* line 28, ../scss/modules/_themes.scss */
+/* line 29, ../scss/modules/_themes.scss */
 footer label.prefix, footer label.postfix, footer label.affix, footer .label.prefix, footer .label.postfix, footer .label.affix {
   color: #efefef;
   background-color: #064c80;
@@ -3711,19 +3764,15 @@ footer div.row.content {
   position: absolute;
   bottom: 0;
 }
-/* line 14, ../scss/modules/_themes.scss */
+/* line 18, ../scss/modules/_themes.scss */
 footer div.row.content a {
   color: #798893;
 }
-/* line 17, ../scss/modules/_themes.scss */
+/* line 21, ../scss/modules/_themes.scss */
 footer div.row.content a:hover {
   color: #efefef;
 }
-/* line 23, ../scss/modules/_themes.scss */
-footer div.row.content p, footer div.row.content h1, footer div.row.content h2, footer div.row.content h3, footer div.row.content h4, footer div.row.content h5, footer div.row.content h6, footer div.row.content label, footer div.row.content div {
-  color: #efefef;
-}
-/* line 28, ../scss/modules/_themes.scss */
+/* line 29, ../scss/modules/_themes.scss */
 footer div.row.content label.prefix, footer div.row.content label.postfix, footer div.row.content label.affix, footer div.row.content .label.prefix, footer div.row.content .label.postfix, footer div.row.content .label.affix {
   color: #efefef;
   background-color: #053d67;
@@ -3747,11 +3796,7 @@ footer div.row.content label.prefix, footer div.row.content label.postfix, foote
   margin-bottom: 0.8rem;
   font-weight: 200;
 }
-/* line 23, ../scss/modules/_themes.scss */
-#login form p, #login form h1, #login form h2, #login form h3, #login form h4, #login form h5, #login form h6, #login form label, #login form div {
-  color: #042f4f;
-}
-/* line 28, ../scss/modules/_themes.scss */
+/* line 29, ../scss/modules/_themes.scss */
 #login form label.prefix, #login form label.postfix, #login form label.affix, #login form .label.prefix, #login form .label.postfix, #login form .label.affix {
   color: #042f4f;
   background-color: #d5d5d5;
