--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,26 @@
 @import url("//fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic");
 /* Import Settings */
 /* Import Modules */
+/* line 41, ../scss/modules/_themes.scss */
+.color-primary {
+  color: #364656;
+}
+
+/* line 42, ../scss/modules/_themes.scss */
+.color-secondary {
+  color: #c44741;
+}
+
+/* line 43, ../scss/modules/_themes.scss */
+.color-light {
+  color: #efefef;
+}
+
+/* line 44, ../scss/modules/_themes.scss */
+.color-dark {
+  color: #222222;
+}
+
 /* Typography Resets */
 /* line 8, ../scss/modules/_reset.scss */
 div, dl, dt, dd,
@@ -25,6 +45,12 @@ strong, b {
   line-height: inherit;
 }
 
+/* Form Resets */
+/* line 24, ../scss/modules/_reset.scss */
+input, button, textarea, select {
+  outline: none;
+}
+
 /* line 2, ../scss/modules/_layout.scss */
 *, *:before, *:after, header, footer, section, .col, [class*="col-"], .full, .row, [class*="row-"], .layer, .page, form, form input[type], form textarea {
   -webkit-box-sizing: border-box;
@@ -42,29 +68,39 @@ strong, b {
   transform: translateY(-50%);
 }
 
-/* line 15, ../scss/modules/_layout.scss */
+/* line 11, ../scss/modules/_layout.scss */
 header, footer, section, .col, [class*="col-"], .full, .row, [class*="row-"], .layer, .page, form, nav.horizontal > ul, .button-group {
   overflow: hidden;
   *zoom: 1;
 }
 
+/* line 15, ../scss/modules/_layout.scss */
+.float-left {
+  float: left;
+}
+
 /* line 19, ../scss/modules/_layout.scss */
+.float-right {
+  float: right;
+}
+
+/* line 23, ../scss/modules/_layout.scss */
 html {
   height: 100%;
 }
 
-/* line 23, ../scss/modules/_layout.scss */
+/* line 27, ../scss/modules/_layout.scss */
 *, *:before, *:after {
   position: relative;
 }
 
-/* line 124, ../scss/modules/_layout.scss */
+/* line 128, ../scss/modules/_layout.scss */
 .inline {
   display: inline-block;
   margin-bottom: 0;
 }
 
-/* line 133, ../scss/modules/_layout.scss */
+/* line 145, ../scss/modules/_layout.scss */
 .full {
   height: 100%;
 }
@@ -92,7 +128,7 @@ header, footer, section, .col, [class*="col-"], .full, .row, [class*="row-"], .l
 }
 
 /* line 26, ../scss/modules/_grid.scss */
-.row.col-gutter, [class*="row-"].col-gutter, .row.col-gutter > [class*="col-"], [class*="row-"].col-gutter > [class*="col-"] {
+.row.columns-gutter, [class*="row-"].columns-gutter, .row.columns-gutter > [class*="col-"], [class*="row-"].columns-gutter > [class*="col-"] {
   padding-left: 8px;
   padding-right: 8px;
 }
@@ -103,7 +139,7 @@ header, footer, section, .col, [class*="col-"], .full, .row, [class*="row-"], .l
 }
 
 /* line 36, ../scss/modules/_grid.scss */
-.col.row-gutter, [class*="col-"].row-gutter, .col.row-gutter > [class*="row-"], [class*="col-"].row-gutter > [class*="row-"] {
+.col.rows-gutter, [class*="col-"].rows-gutter, .col.rows-gutter > [class*="row-"], [class*="col-"].rows-gutter > [class*="row-"] {
   padding-top: 8px;
   padding-bottom: 8px;
 }
@@ -2844,25 +2880,26 @@ nav ul ul {
   display: none;
   background-color: #364656;
 }
-/* line 38, ../scss/modules/_nav.scss */
+/* line 39, ../scss/modules/_nav.scss */
 nav.horizontal > ul > li {
   float: left;
 }
-/* line 43, ../scss/modules/_nav.scss */
+/* line 44, ../scss/modules/_nav.scss */
 nav.horizontal.full {
   height: 100%;
+  margin-bottom: 0;
 }
-/* line 46, ../scss/modules/_nav.scss */
+/* line 48, ../scss/modules/_nav.scss */
 nav.horizontal.full > ul {
   height: 100%;
 }
-/* line 49, ../scss/modules/_nav.scss */
+/* line 51, ../scss/modules/_nav.scss */
 nav.horizontal.full > ul > li {
   height: 100%;
   display: table;
   table-layout: fixed;
 }
-/* line 54, ../scss/modules/_nav.scss */
+/* line 56, ../scss/modules/_nav.scss */
 nav.horizontal.full > ul > li a {
   display: table-cell;
   vertical-align: middle;
@@ -3414,7 +3451,7 @@ table tbody tr td {
   }
 }
 
-/* line 26, ../scss/modules/_alerts.scss */
+/* line 11, ../scss/modules/_alerts.scss */
 .alert {
   display: block;
   width: 100%;
@@ -3423,31 +3460,63 @@ table tbody tr td {
   margin-bottom: 16px;
   font-size: 15.49854px ;
   font-size: 0.86103rem ;
-  color: #efefef;
+}
+
+/* line 21, ../scss/modules/_alerts.scss */
+.alert {
   background-color: #364656;
-  border-color: #182027;
-  color: white;
-}
-/* line 37, ../scss/modules/_alerts.scss */
-.alert.success {
   color: #efefef;
+  border-color: #222d37;
+}
+/* line 69, ../scss/settings/_helpers.scss */
+.alert a {
+  color: #929aa2;
+}
+/* line 71, ../scss/settings/_helpers.scss */
+.alert a:hover {
+  color: #76818b;
+}
+/* line 26, ../scss/modules/_alerts.scss */
+.success.alert {
   background-color: #96cc69;
-  border-color: #6fae3b;
-  color: white;
-}
-/* line 38, ../scss/modules/_alerts.scss */
-.alert.warning {
-  color: #222222;
-  background-color: #ffcc5c;
-  border-color: #ffb410;
-  color: white;
-}
-/* line 39, ../scss/modules/_alerts.scss */
-.alert.failure {
   color: #efefef;
+  border-color: #7bbf43;
+}
+/* line 69, ../scss/settings/_helpers.scss */
+.success.alert a {
+  color: #c2ddac;
+}
+/* line 71, ../scss/settings/_helpers.scss */
+.success.alert a:hover {
+  color: #a7ce88;
+}
+/* line 27, ../scss/modules/_alerts.scss */
+.warning.alert {
+  background-color: #ffcc5c;
+  color: #efefef;
+  border-color: #ffbc29;
+}
+/* line 69, ../scss/settings/_helpers.scss */
+.warning.alert a {
+  color: #f7dda5;
+}
+/* line 71, ../scss/settings/_helpers.scss */
+.warning.alert a:hover {
+  color: #f3cb76;
+}
+/* line 28, ../scss/modules/_alerts.scss */
+.failure.alert {
   background-color: #c44741;
-  border-color: #8d302c;
-  color: white;
+  color: #efefef;
+  border-color: #a03732;
+}
+/* line 69, ../scss/settings/_helpers.scss */
+.failure.alert a {
+  color: #d99b98;
+}
+/* line 71, ../scss/settings/_helpers.scss */
+.failure.alert a:hover {
+  color: #cb7773;
 }
 
 /* Import Extensions */
@@ -3519,19 +3588,15 @@ nav.dark > ul > li > a:hover {
   background-color: #364656;
   color: #efefef;
 }
-/* line 14, ../scss/modules/_themes.scss */
+/* line 18, ../scss/modules/_themes.scss */
 .foo a {
   color: #929aa2;
 }
-/* line 17, ../scss/modules/_themes.scss */
+/* line 21, ../scss/modules/_themes.scss */
 .foo a:hover {
   color: #efefef;
 }
-/* line 23, ../scss/modules/_themes.scss */
-.foo p, .foo h1, .foo h2, .foo h3, .foo h4, .foo h5, .foo h6, .foo label, .foo div {
-  color: #efefef;
-}
-/* line 28, ../scss/modules/_themes.scss */
+/* line 29, ../scss/modules/_themes.scss */
 .foo label.prefix, .foo label.postfix, .foo label.affix, .foo .label.prefix, .foo .label.postfix, .foo .label.affix {
   color: #efefef;
   background-color: #4a5f75;
@@ -3542,11 +3607,7 @@ nav.dark > ul > li > a:hover {
   background-color: #efefef;
   color: #364656;
 }
-/* line 23, ../scss/modules/_themes.scss */
-.bar p, .bar h1, .bar h2, .bar h3, .bar h4, .bar h5, .bar h6, .bar label, .bar div {
-  color: #364656;
-}
-/* line 28, ../scss/modules/_themes.scss */
+/* line 29, ../scss/modules/_themes.scss */
 .bar label.prefix, .bar label.postfix, .bar label.affix, .bar .label.prefix, .bar .label.postfix, .bar .label.affix {
   color: #364656;
   background-color: #d5d5d5;
