--- a/scss/cadenza.scss
+++ b/scss/cadenza.scss
@@ -11,6 +11,7 @@
     
 /* Import Modules */
 @import
+    'modules/_themes',
     'modules/_reset',
     'modules/_layout',
     'modules/_grid',
@@ -24,8 +25,7 @@
     'modules/_tables',
     'modules/_media',
     'modules/_state',
-    'modules/_alerts',
-    'modules/_themes';
+    'modules/_alerts';
 
 /* Import Extensions */
 @import
