--- a/scss/modules/_reset.scss
+++ b/scss/modules/_reset.scss
@@ -19,3 +19,8 @@ strong, b {
     font-weight: bold;
     line-height: inherit;
 }
+
+/* Form Resets */
+input, button, textarea, select {
+    outline: none;
+}
